[project]
name = "pipeline-design"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gurobipy>=12.0.1",
    "highspy>=1.10.0",
    "networkx>=3.4.2",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "pyarrow>=19.0.1",
    "pydantic>=2.11.3",
    "requests>=2.32.3",
    "streamlit>=1.44.1",
]
